--- a/Lectures/2.Floating Point.md
+++ b/Lectures/2.Floating Point.md
@@ -305,3 +305,10 @@ Overflow and inexactness of rounding:
 1e20 * (1e20 - 1e20) = 0.0;
 1e20*1e20 - 1e20*1e20 = NaN; it overflows
 ```
+
+
+-------
+
+## DataLab
+
+[Online solution](https://skylark-workshop.xyz/blog/csapp-datalab-new/)
